[package]
name = "Proiect_ATAD"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
webbrowser = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
dirs = "5.0.1"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"